--- a/src/Pages/home.style.css
+++ b/src/Pages/home.style.css
@@ -1,3 +1,12 @@
+h1 {
+  font-weight: bold;
+}
+
+.homeContainer {
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+}
+
 .openNav {
     position: relative;
     z-index: 10;
